# server/api/controllers/fda_api.js
@@ -1,6 +1,6 @@
 'use strict';
 var request = require('request'),
-    async = require('async');
+  async = require('async');
 
 //'https://api.fda.gov/drug/event.json?search=receivedate:[20040101+TO+20150101]&count=patient.patientsex',
 //'http://54.165.240.32/drug/label.json?search=effective_time:[20090601+TO+20140731]&limit=50',
@@ -10,25 +10,44 @@ var FDA_DRUG_EVENT = 'https://api.fda.gov/drug/';
 var FDA_DEVICE_EVENT = 'https://api.fda.gov/device/';
 var FDA_FOOD_EVENT = 'https://api.fda.gov/food/';
 
-
-
-
-
-
 module.exports = {
 
-  aggregateSplashSearch: function(req, res) {
+  aggregateSplashSearch: function (req, res) {
     getAggregateSplashSearchData(req, res)
   },
 
   drugEventSearch: function (req, res) {
-    getEventSearchData(req, function(data){
+    getEventSearchData(req, function (data) {
       res.json(data);
     });
   },
 
   drugEventRangeCount: function (req, res) {
-    getRangeCountData(req, function(data){
+    getRangeCountData(req, function (data) {
+      res.json(data);
+    });
+  },
+
+  deviceEventSearch: function (req, res) {
+    getAPIData(FDA_END_POINTS.device, FDA_END_TYPES.event, req, function (data) {
+      res.json(data);
+    });
+  },
+
+  deviceRangeCount: function (req, res) {
+    getRangeCountData(FDA_END_POINTS.device, FDA_END_TYPES.event, 'receivedate', req, function (data) {
+      res.json(data);
+    });
+  },
+
+  foodEventSearch: function (req, res) {
+    getAPIData(FDA_END_POINTS.device, FDA_END_TYPES.event, req, function (data) {
+      res.json(data);
+    });
+  },
+
+  foodRangeCount: function (req, res) {
+    getRangeCountData(FDA_END_POINTS.food, FDA_END_TYPES.enforcement, 'receivedate', req, function (data) {
       res.json(data);
     });
   },
@@ -38,21 +57,22 @@ module.exports = {
     getEventSearchData: getEventSearchData
   }
 
-}
+};
 
-function getAggregateSplashSearchData (req, res) {
+function getAggregateSplashSearchData(req, res) {
   async.parallel([
-    function(callback) {
-      var fdaUrl = FDA_DRUG_EVENT + 'event.json?limit=2&search=patient.drug.openfda.brand_name:"' + req.swagger.params.value.value + '"+patient.drug.openfda.brand_name:"' +req.swagger.params.value.value + '"';
-      getDataFromFdaApi(fdaUrl, function (data) {
-        callback(null, data);
-      });
+      function (callback) {
+        var fdaUrl = FDA_DRUG_EVENT + 'event.json?limit=2&search=patient.drug.openfda.brand_name:"' + req.swagger.params.value.value + '"+patient.drug.openfda.brand_name:"' + req.swagger.params.value.value + '"';
+        getDataFromFdaApi(fdaUrl, function (data) {
+          callback(null, data);
+        });
+      }
+    ],
+    function (err, data) {
+      res.json(data)
     }
-  ],
-    function(err, data){res.json(data)}
   );
 }
-
 
 function getRangeCountData(req, callback) {
   var fdaUrl = FDA_DRUG_EVENT + 'event.json?search=receivedate:[' + req.swagger.params.start.value + '+TO+' + req.swagger.params.end.value + ']&count=' + req.swagger.params.field.value;
@@ -73,8 +93,8 @@ function getEventSearchData(req, callback) {
 
 function getDataFromFdaApi(fdaUrl, callback) {
   request.get({
-    url: encodeURI(fdaUrl),
-    json: true
+      url: encodeURI(fdaUrl),
+      json: true
     },
     function (error, response, body) {
       if (!error && (response.statusCode == 200 || 404)) {
@@ -85,3 +105,30 @@ function getDataFromFdaApi(fdaUrl, callback) {
     }
   );
 }
+
+
+var FDA_END_POINTS = {
+  device: 'https://api.fda.gov/device/',
+  drug: 'https://api.fda.gov/drug/',
+  good: 'https://api.fda.gov/food/'
+};
+var FDA_END_TYPES = {
+  event: 'event.json',
+  enforcement: 'enforcement.json',
+  label: 'label.json'
+};
+
+var getAPIData = function (endPointBase, typeOfEngPoint, req, callback) {
+  var limit = req.swagger.params.limit.value || 100;
+  var start = req.swagger.params.skip.value || 0;
+  var fdaUrl = FDA_END_POINTS[endPointBase] + FDA_END_TYPES[typeOfEngPoint] + '?search=' + req.swagger.params.query.value + '&limit=' + limit + '&skip=' + start;
+  getDataFromFdaApi(fdaUrl, callback);
+};
+
+var getRangeCountData = function (endPointBase, typeOfEngPoint, datefield, req, callback) {
+  var fdaUrl = FDA_END_POINTS[endPointBase] + FDA_END_TYPES[typeOfEngPoint] + "?search=" + datefield
+    + ':[' + req.swagger.params.start.value + '+TO+' + req.swagger.params.end.value + ']&count=' + req.swagger.params.field.value;
+  getDataFromFdaApi(fdaUrl, callback);
+};
+
+
